# MLOps-Projects

./: LICENSE
.github/workflows/: main.yml
01-docker-basics/: Dockerfile  README.md  pyproject.toml  start.sh
02-github-actions-kdrama-reco/.github/workflows/: ci-cd.yml
Agent_visa/: pyproject.toml  requirement.txt  start.sh
Agent_visa/chroma_db/5d6fc148-516b-496c-a2f4-82a6df165a2f/: index_metadata.pickle
Agent_visa/src/: main.py
