[project]
name = "agent-visa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.3.5",
    "dotenv>=0.9.9",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.0",
    "langchain-groq>=1.1.0",
    "langchain-text-splitters>=1.0.0",
    "langchain-upstage>=0.7.5",
    "pypdf>=4.3.1",
    "streamlit>=1.51.0",
]
