[project]
name = "agent-visa"
version = "0.1.0"
description = ""
authors = [
    {name = "Sylvainpons",email = "sylvainpons680@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "streamlit (>=1.51.0,<2.0.0)",
    "langchain (>=1.1.0,<2.0.0)",
    "langchain-upstage (>=0.7.5,<0.8.0)",
    "langchain-chroma (>=1.0.0,<2.0.0)",
    "langchain-groq (>=1.1.0,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pypdf (<5)",
    "chromadb (>=1.3.5,<2.0.0)",
    "langchainhub (>=0.1.21,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
